2011-03-25  Chang Shu  <cshu@webkit.org>

        Reviewed by Ryosuke Niwa.

        rename Node::isContentEditable and all call sites to rendererIsEditable
        https://bugs.webkit.org/show_bug.cgi?id=54290

        This is part of the effort to separate JS API HTMLElement isContentEditable from
        internal Node::rendererIsEditable.

        * src/WebNode.cpp:
        (WebKit::WebNode::isContentEditable):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setFocus):
        (WebKit::WebViewImpl::setComposition):
        (WebKit::WebViewImpl::confirmComposition):

2011-03-25  Mikhail Naganov  <mnaganov@chromium.org>

        Roll forward Chromium deps to r79379 to pick up V8 3.2.4.2.

        * DEPS:

2011-03-24  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r81916 and r81917.
        http://trac.webkit.org/changeset/81916
        http://trac.webkit.org/changeset/81917
        https://bugs.webkit.org/show_bug.cgi?id=57071

        broke a test on platforms that do not have QuickTime installed
        (Requested by estes on #webkit).

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::objectContentType):
        * src/FrameLoaderClientImpl.h:

2011-03-24  Min Qin  <qinmin@google.com>

        Reviewed by James Robinson.

        Allow WebMediaPlayerClient to notify MediaPlayer that the playback state has changed

        https://bugs.webkit.org/show_bug.cgi?id=56837

        * public/WebMediaPlayerClient.h:
        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::playbackStateChanged):
        * src/WebMediaPlayerClientImpl.h:

2011-03-23  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Tony Chang.

        [chromium] Get rid of WEB_TEXT_CHECKING_RESULT_IS_A_STRUCT since it&apos;s not needed anymore
        https://bugs.webkit.org/show_bug.cgi?id=56955

        * DEPS:
        * public/WebTextCheckingResult.h:
